[package]
name = "lane"
version = "0.1.0"
authors = ["Corwin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = { version = "0.20" }
slotmap = { version = "1.0", default-features = false }
lane_logic = { path = "../lane_logic" }
async-recursion = "1.0.2"

[profile.dev]
opt-level = 2
debug = true

[profile.release]
panic = "abort"
lto = "fat"
debug = true
codegen-units = 1
