[package]
name = "lane_logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb_fixnum = { version = "0.12.1", path = "../../agb/agb-fixnum" }
slotmap = { version = "1.0", default-features = false }
