[package]
name = "lane_logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb_fixnum = { version = "0.15" }
agb_hashmap = { version = "0.15" }
slotmap = { version = "1", default-features = false }
